# workshopkafkaaovivo

./: README.md  pyproject.toml
kafka-consumer/: kafka-consumer-2.py  kafka-consumer.py  messages.csv
kafka-market-project/: docker-compose.yml
kafka-market-project/consumer/: consumer.py
kafka-market-project/dashboard/: dashboard.py
kafka-market-project/producer/: Dockerfile  producer.py
kafka-producer/: kafka-producer.py
